--- a/Quiz/app/src/main/res/values/strings.xml
+++ b/Quiz/app/src/main/res/values/strings.xml
@@ -1,14 +1,19 @@
 <resources>
     <string name="app_name">Quiz</string>
-    <string name="ybtn">Да</string>
-    <string name="nbtn">Нет</string>
-    <string name="correct">Правильно</string>
-    <string name="incorrect">Неправильно!</string>
+    <string name="answerYes">Да</string>
+    <string name="answerNo">Нет</string>
+    <string name="messageCorrect">Правильно</string>
+    <string name="messageIncorrect">Неправильно!</string>
+    <string name="answerCorrect">верно</string>
+    <string name="answerIncorrect">неверно</string>
+    <string name="joinString">&#160;-&#160;</string>
 
     <string name="question">Земля плоская?</string>
     <string name="question1">Вода мокрая?</string>
     <string name="question2">Трава зелёная?</string>
     <string name="question3">Крокодилы летают?</string>
     <string name="question4">Камни вкусные?</string>
+
+    <string name="answersCaptionLabel">Ваши ответы:</string>
 
 </resources>
